src/objects/Doctor__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstNameLastName__c</fullName>
        <formula>Last_Name__c &amp;&quot; &quot;&amp;First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FirstNameLastName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Doctor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Information</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>City__c</columns>
        <columns>Street__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Information</label>
    </listViews>
    <nameField>
        <label>Doctor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doctors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_Corret_Phone</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISPICKVAL( Country__c , &apos;PL&apos;),
 LEFT( Phone__c, 3)  &lt;&gt; &quot;+48&quot;
)</errorConditionFormula>
        <errorDisplayField>Phone__c</errorDisplayField>
        <errorMessage>Your phone number is wrong</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_correct_email</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISPICKVAL( Country__c , &apos;NL&apos;), 
 RIGHT(  Email__c  , 3)  &lt;&gt;  &apos;.nl&apos;
)</errorConditionFormula>
        <errorDisplayField>Email__c</errorDisplayField>
        <errorMessage>Your email is wrong</errorMessage>
    </validationRules>
</CustomObject>